--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <a class="navbar-brand" href="#">Damian Alexander Isaac</a>
       <ul class="navbar-nav">
         <li class="nav-item nav-spacer">
-          <a class="nav-link" href="/home.html">About</a>
+          <a class="nav-link" href="/index.html">About</a>
         </li>
         <li class="nav-item nav-spacer">
           <a class="nav-link" href="/portfolio.html">Portfolio</a>
