--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <a class="navbar-brand" href="#">Damian Alexander Isaac</a>
       <ul class="navbar-nav">
         <li class="nav-item active nav-spacer">
-          <a class="nav-link" href="/idex.html">About</a>
+          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/index.html">About</a>
         </li>
         <li class="nav-item nav-spacer">
-          <a class="nav-link" href="/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
