--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <a class="navbar-brand" href="#">Damian Alexander Isaac</a>
       <ul class="navbar-nav">
         <li class="nav-item active nav-spacer">
-          <a class="nav-link" href="/Portfolio/index.html">About</a>
+          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/index.html">About</a>
         </li>
         <li class="nav-item nav-spacer">
-          <a class="nav-link" href="/Portfolio/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Portfolio/contact.html">Contact</a>
+          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -73,9 +73,9 @@
             <div class="about-links-sm">
               <a class="about-link" href="https://drive.google.com/open?id=1tTNa7apIofbZK2QletuVBgkmSSEaVmc06s_pyHFEb4g"
                 target="_blank"><span class="bracket tags">&#60;</span><i class="far fa-address-book fa-1x"></i><span class="bracket tags">&#62;</span></a>
-              <a class="about-link" href="#"><span class="bracket tags">&#60;</span><i class="fab fa-github-square fa-1x"></i><span
+              <a class="about-link" href="https://github.com/DamianIsaacAlexander" target="_blank"><span class="bracket tags">&#60;</span><i class="fab fa-github-square fa-1x"></i><span
                   class="bracket tags">&#62;</span></a>
-              <a class="about-link" href="#"><span class="bracket tags">&#60;</span><i class="fab fa-linkedin"></i><span
+              <a class="about-link" href="https://www.linkedin.com/in/damian-isaac-2b5b91196/" target="_blank"><span class="bracket tags">&#60;</span><i class="fab fa-linkedin"></i><span
                   class="bracket tags">&#62;</span></a>
             </div>
 
