--- a/portfolio.html
+++ b/portfolio.html
@@ -59,10 +59,24 @@
             <div class="row">
 
               <div class="port-item col-lg-6 col-md-6 col-sm-6">
-                <a href="https://damianisaacalexander.github.io/PersonalProjects/Code_Refactor/Develop/index.html"
+                <a href="https://github.com/DamianIsaacAlexander/PersonalProjects/tree/master/WeatherApp"
                   target="_blank" class="portfolio-link">
-                  <img src="resources/css/img/refactor.png" class="portfolio-img">
-                  <h5 class="project-title">Code Refactor</h5>
+                  <img src="resources/css/img/project-1.jpg" class="portfolio-img">
+                  <h5 class="project-title">Weather Dashboard</h5>
+                </a>
+              </div>
+              <div class="port-item col-lg-6 col-md-6 col-sm-6">
+                <a href="https://github.com/DamianIsaacAlexander/PersonalProjects/tree/master/Password_Generator"
+                  target="_blank" class="portfolio-link">
+                  <img src="resources/css/img/project-2.jpg" class="portfolio-img">
+                  <h5 class="project-title">Password Generator</h5>
+                </a>
+              </div>
+              <div class="port-item col-lg-6 col-md-6 col-sm-6">
+                <a href="https://github.com/DamianIsaacAlexander/PersonalProjects/tree/master/GetFed"
+                  target="_blank" class="portfolio-link">
+                  <img src="resources/css/img/project-3.jpg" class="portfolio-img">
+                  <h5 class="project-title">Recipe Search</h5>
                 </a>
               </div>
 
