--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <a class="navbar-brand" href="#">Damian Alexander Isaac</a>
       <ul class="navbar-nav">
         <li class="nav-item active nav-spacer">
-          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/index.html">About</a>
+          <a class="nav-link" href="/Portfolio/index.html">About</a>
         </li>
         <li class="nav-item nav-spacer">
-          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/Portfolio/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/contact.html">Contact</a>
+          <a class="nav-link" href="/Portfolio/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -59,7 +59,7 @@
             <span class="tags">&#60;h1&#62;</span>
             <h1 class="card-title">About</h1>
             <span class="tags">&#60;/h1&#62;</span>
-            <img src="resources/css/img/300.png" class="about-img" alt="Portfolio Picture">
+            <img src="resources/css/img/profile.jpg" class="about-img" alt="Portfolio Picture">
             <p class="about-text">Hello, my name is Damian! I'm a full-stack web developer, and game developer hobbyist.
             </p>
             <div class="about-links-lg">
