--- a/portfolio.html
+++ b/portfolio.html
@@ -33,13 +33,13 @@
       <a class="navbar-brand" href="#">Damian Alexander Isaac</a>
       <ul class="navbar-nav">
           <li class="nav-item nav-spacer">
-          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/index.html">About</a>
+          <a class="nav-link" href="/Portfolio/index.html">About</a>
         </li>
         <li class="nav-item active nav-spacer">
-          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/Portfolio/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/https://damianisaacalexander.github.io/Portfolio/contact.html">Contact</a>
+          <a class="nav-link" href="/Portfolio/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
