--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <div class="about-links-lg">
               <a class="about-link" href="https://drive.google.com/open?id=1tTNa7apIofbZK2QletuVBgkmSSEaVmc06s_pyHFEb4g"
                 target="_blank"><span class="bracket tags">&#60;</span>Resume<span class="bracket tags">&#62;</span></a>
-              <a class="about-link" href="#"><span class="bracket tags">&#60;</span>GitHub<span
+              <a class="about-link"  href="https://github.com/DamianIsaacAlexander" target="_blank"><span class="bracket tags">&#60;</span>GitHub<span
                   class="bracket tags">&#62;</span></a>
-              <a class="about-link" href="#"><span class="bracket tags">&#60;</span>LinkedIn<span
+              <a class="about-link"  href="https://www.linkedin.com/in/damian-isaac-2b5b91196/" target="_blank"><span class="bracket tags">&#60;</span>LinkedIn<span
                   class="bracket tags">&#62;</span></a>
             </div>
             <div class="about-links-sm">
