--- a/portfolio.html
+++ b/portfolio.html
@@ -61,21 +61,21 @@
               <div class="port-item col-lg-6 col-md-6 col-sm-6">
                 <a href="https://github.com/DamianIsaacAlexander/PersonalProjects/tree/master/WeatherApp"
                   target="_blank" class="portfolio-link">
-                  <img src="resources/css/img/project-1.jpg" class="portfolio-img">
+                  <img src="resources/css/img/project-1.jpg" class="portfolio-img" alt="Weather Dashboard Project Img">
                   <h5 class="project-title">Weather Dashboard</h5>
                 </a>
               </div>
               <div class="port-item col-lg-6 col-md-6 col-sm-6">
                 <a href="https://github.com/DamianIsaacAlexander/PersonalProjects/tree/master/Password_Generator"
                   target="_blank" class="portfolio-link">
-                  <img src="resources/css/img/project-2.jpg" class="portfolio-img">
+                  <img src="resources/css/img/project-2.jpg" class="portfolio-img" alt="Password Generator Project Img">
                   <h5 class="project-title">Password Generator</h5>
                 </a>
               </div>
               <div class="port-item col-lg-6 col-md-6 col-sm-6">
                 <a href="https://github.com/DamianIsaacAlexander/PersonalProjects/tree/master/GetFed"
                   target="_blank" class="portfolio-link">
-                  <img src="resources/css/img/project-3.jpg" class="portfolio-img">
+                  <img src="resources/css/img/project-3.jpg" class="portfolio-img" alt="Recipe Search Project Img">
                   <h5 class="project-title">Recipe Search</h5>
                 </a>
               </div>
