--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,35 @@
                   <h5 class="project-title">Recipe Search</h5>
                 </a>
               </div>
-
+              <div class="port-item col-lg-6 col-md-6 col-sm-6">
+                <a href="https://github.com/DamianIsaacAlexander/Project-2"
+                  target="_blank" class="portfolio-link">
+                  <img src="resources/css/img/project-5.jpg" class="portfolio-img" alt="GifLash Project Img">
+                  <h5 class="project-title">GifLash</h5>
+                </a>
+              </div>
+              <div class="port-item col-lg-6 col-md-6 col-sm-6">
+                <a href="https://github.com/DamianIsaacAlexander/PersonalProjects/tree/master/Employee_Manager"
+                  target="_blank" class="portfolio-link">
+                  <img src="resources/css/img/project-4.jpg" class="portfolio-img" alt="Employee Manager Project Img">
+                  <h5 class="project-title">Employee Manager</h5>
+                </a>
+              </div>
+              <div class="port-item col-lg-6 col-md-6 col-sm-6">
+                <a href="https://github.com/DamianIsaacAlexander/Template-Engine"
+                  target="_blank" class="portfolio-link">
+                  <img src="resources/css/img/project-6.jpg" class="portfolio-img" alt="Templete Engine Project Img">
+                  <h5 class="project-title">Template Engine</h5>
+                </a>
+              </div>
+              <div class="port-item col-lg-6 col-md-6 col-sm-6">
+                <a href="https://github.com/DamianIsaacAlexander/Note_Taker"
+                  target="_blank" class="portfolio-link">
+                  <img src="resources/css/img/project-7.jpg" class="portfolio-img" alt="Note Taker Project Img">
+                  <h5 class="project-title">Note Taker</h5>
+                </a>
+              </div>
+              
             </div>
           </div>
           <span class="tags">&nbsp;&#60;/body&#62;</span>
